# cashback.paisy_ui

./: .gitignore  CONTRIBUTING.md  README.md  SUGGESTIONS.md  index.html  main.py  pyproject.toml
.github/workflows/: pages.yml
daisy_ui/: core.py
docs/: advanced.md  api.md
examples/: index.html  index.md  showcase.html  showcase.py  with_fastapi.py
paisy_ui/: __init__.py  base.py  components.py  core.py
src/paisy_ui/: __init__.py  base.py  components.py  core.py  exceptions.py  utils.py
src/paisy_ui/components/: __init__.py  actions.py  base.py  data_display.py  data_input.py  feedback.py  layout.py
src/paisy_ui/mixins/: __init__.py  background_color.py  border.py  display.py  sizing.py  spacing.py  text_color.py  typography.py  variant.py
