[tool.poetry]
name = "bs-dasyui"
version = "0.1.0"
description = ""
authors = ["Iago B. Almeida <iago.almeida@maistodos.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
